--- a/Calculator/Calculator-Info.plist
+++ b/Calculator/Calculator-Info.plist
@@ -26,8 +26,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UIMainStoryboardFile</key>
-	<string>MainStoryboard_iPhone</string>
+	<key>NSMainNibFile</key>
+	<string>MainWindow</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
 	<key>UIRequiredDeviceCapabilities</key>
